--- a/Biblio/Biblio.vcxproj.filters
+++ b/Biblio/Biblio.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="AddSocioDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HttpClient.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Biblio.cpp">
@@ -99,6 +102,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AddSocioDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HttpClient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
